--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
@@ -5,19 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Countdown for Timer</title>
+  <title>Machine {{ machine.id }} Countdown</title>
 </head>
 
 <body>
   {% load static %}
   <script src="{% static 'js/countdown.js' %}"></script>
   <script>
-      var timer = {{ timeLeft }};
-      var count = (Date.now() /1000 );
-      startCountdown("timer",count + timer);
-    </script>
-  <h1>Countdown Timer for Machine <strong style="color: red;">{{ Machine_ID }}</strong></h1>
-  <h2>Hi, <strong style="color: red;">{{ username }}</strong></h2>
+    startCountdown("timer", {{epochTime}});
+  </script>
+  <h1>Countdown Timer for <strong style="color: red;">{{ machine.name }}</strong></h1>
+  <h2>In use by: <strong style="color: red;">{{ username }}</strong></h2>
   <div>
     <p>Time left: <strong style="color: red;" id="timer"></strong></p>
   </div>
