id for timer page
Added URL mapping for each machine page. I used this guide as a template: https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django/Generic_views#book_detail_page

--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
@@ -16,8 +16,8 @@
       var count = (Date.now() /1000 );
       startCountdown("timer",count + timer);
     </script>
-  <h1>Countdown Timer for Machine <strong style="color: red;">{{ Machine_ID }}</strong></h1>
-  <h2>Hi, <strong style="color: red;">{{ username }}</strong></h2>
+  <h1>Countdown Timer for <strong style="color: red;">{{ machine.name }}</strong></h1>
+  <h2>In use by: <strong style="color: red;">{{ username }}</strong></h2>
   <div>
     <p>Time left: <strong style="color: red;" id="timer"></strong></p>
   </div>
