Linked all front-end pages together
Only Machine 2 from the machine overview page links to set timer page

--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
@@ -10,7 +10,7 @@
 
 <body>
   {% load static %}
-    <form action="/timer/" method="post"> {% csrf_token %}
+    <form action="/timer/2" method="post"> {% csrf_token %}
         <label for="time"> Time:</label>
         <input type="number" id="time" name="time"><br><br>
         <input type="submit">
