--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/ConsoleTrackerApp/machine_list.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/ConsoleTrackerApp/machine_list.html
@@ -15,7 +15,15 @@
   <ul>
     {% for machine in machine_list %}
       <li>
-        {% if machine.active %} <a>{{ machine.name }}</a> <span style="color:red;">(IN USE)</span> {% else %} <a href="/timer/{{ machine.id }}">{{ machine.name }}</a> <span style="color:green;">(AVAILABLE)</span> {% endif %}
+        {% if machine.active %} 
+          <a>{{ machine.name }}</a> <span style="color:red;">(IN USE)</span> 
+        {% else %} 
+          {% if machine.id == 2 %} 
+          <a href="/time_manager/">{{ machine.name }}</a> <span style="color:green;">(AVAILABLE)</span> 
+          {% else %} 
+          <a href="/timer/{{ machine.id }}">{{ machine.name }}</a> <span style="color:green;">(AVAILABLE)</span> 
+          {% endif %}
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
