Connect Model and View
Connected the model and the view so that time left on the countdown page persists when the page is reloaded.

each time_manager page sets a specific machine

Restrictions:
I set a default user (User with id 1)
I made the user only be able to set the remaining time on their account to the machine.

--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/ConsoleTrackerApp/machine_list.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/ConsoleTrackerApp/machine_list.html
@@ -18,11 +18,7 @@
         {% if machine.active %} 
           <a>{{ machine.name }}</a> <span style="color:red;">(IN USE)</span> 
         {% else %} 
-          {% if machine.id == 2 %} 
-          <a href="/time_manager/">{{ machine.name }}</a> <span style="color:green;">(AVAILABLE)</span> 
-          {% else %} 
-          <a href="/timer/{{ machine.id }}">{{ machine.name }}</a> <span style="color:green;">(AVAILABLE)</span> 
-          {% endif %}
+          <a href="/time_manager/{{ machine.id }}">{{ machine.name }}</a> <span style="color:green;">(AVAILABLE)</span> 
         {% endif %}
       </li>
     {% endfor %}
