--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
@@ -14,7 +14,7 @@
   <script>
       var timer = {{ timeLeft }};
       var count = (Date.now() /1000 );
-      startCountdown("timer",count + timer);
+      startCountdown("timer", {{epochTime}}); //count + timer);
     </script>
   <h1>Countdown Timer for <strong style="color: red;">{{ machine.name }}</strong></h1>
   <h2>In use by: <strong style="color: red;">{{ username }}</strong></h2>
