--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
@@ -10,10 +10,13 @@
 
 <body>
   {% load static %}
-    <form action="/timer/2" method="post"> {% csrf_token %}
-        <label for="time"> Time:</label>
-        <input type="number" id="time" name="time"><br><br>
-        <input type="submit">
+    <h2>User: {{user.name}}</h2>
+    <h2>Time Remaining: {{ timeLeft }}</h2>
+    <form method="post"> {% csrf_token %}
+        <label for="time"> Would you like to add the time remaining to the machine:</label>
+        <!--<input type="number" id="time" name="time"><br><br>-->
+        <input type="hidden" id="time" name="time" value="{{user.time}}">
+        <input type="submit" {% if machine.active %} disabled {% endif %}>
     </form>
 </body>
 </html>
