--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/ConsoleTrackerApp/machine_list.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/ConsoleTrackerApp/machine_list.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Countdown for Timer</title>
+  <title>Machine List</title>
 </head>
 
 <body>
