--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
@@ -5,17 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Countdown for Timer</title>
+  <title>Machine {{ machine.id }} Countdown</title>
 </head>
 
 <body>
   {% load static %}
   <script src="{% static 'js/countdown.js' %}"></script>
   <script>
-      var timer = {{ timeLeft }};
-      var count = (Date.now() /1000 );
-      startCountdown("timer", {{epochTime}}); //count + timer);
-    </script>
+    startCountdown("timer", {{epochTime}});
+  </script>
   <h1>Countdown Timer for <strong style="color: red;">{{ machine.name }}</strong></h1>
   <h2>In use by: <strong style="color: red;">{{ username }}</strong></h2>
   <div>
