--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Time Manager</title>
+  <title>Time Manager | Machine {{ machine.id }}</title>
 </head>
 
 <body>
