--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/login.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/login.html
@@ -3,4 +3,5 @@
     {% csrf_token %}
     {{ form }}
     <input type="submit" value="Submit">
+    <br> {{ data }} <!--    Added just to show the json response for now-->
 </form>
