--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/time_manager.html
@@ -10,7 +10,7 @@
 
 <body>
   {% load static %}
-    <h2>User: {{user.name}}</h2>
+    <h2>User: {{user.username}}</h2>
     <h2>Time Remaining: {{ timeLeft }}</h2>
     <form method="post"> {% csrf_token %}
         <label for="time"> Would you like to add the time remaining to the machine:</label>
