--- a/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
+++ b/project/ConsoleTracker/ConsoleTrackerApp/templates/countdown.html
@@ -19,5 +19,10 @@
   <div>
     <p>Time left: <strong style="color: red;" id="timer"></strong></p>
   </div>
+  <div>
+    <form method="post"> {% csrf_token %}
+      <input type="submit" name="button" value="End Session">
+    </form>
+  </div>
 </body>
 </html>
