For CSS Mobile #156 - Modified Nav-bar, Implemented CSS onto components like Overview.css, Timer.css.

--- a/project/frontend/src/components/Overview.css
+++ b/project/frontend/src/components/Overview.css
@@ -1,4 +1,8 @@
 .overview__container {
     border:1px solid green;
+
+    /* Enables wrapping for the objects inside the container (mostly for Machine Cards) */
     display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
