--- a/project/frontend/src/components/Timer.css
+++ b/project/frontend/src/components/Timer.css
@@ -13,11 +13,11 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    border-style: solid;
     color: grey;
 }
 
 .time {
+    padding-top: 200px;
     display: box;
     margin-top: 10%;
     margin-bottom: 10%;
@@ -29,6 +29,7 @@
 }
 
 .button {
+    text-align: center;
     justify-content: center;
     align-items: center;
     display: box;
@@ -39,6 +40,7 @@
 
 /* Styling for CIRCLE elements in countdown */
 .base-timer {
+    padding-top: 100px;
     position: relative;
     margin-top: 10%;
     height: 300px;
